# tailscale-network-topology-mapper

./: .gitignore  Dockerfile  Makefile  README.md  acl-and-grant-test-policy.hujson  acl-policy.hujson  config.py  create-network-map.py  docker-compose.yml  main.py  network_graph.py  network_topology.html  policy.hujson  policy_parser.py  pyproject.toml  renderer.py  requirements.txt  security_utils.py  version-cache.json
.github/: tailscale.yml
.github/workflows/: publish-pypi.yml  tailscale.yml
example-policy/: acl-and-grant-test-policy.hujson  acl-policy.hujson  default-tailscale-grant-policy.hujson  grants-example-policy.hujson  network-layer-capabilities.hujson
go-rewrite/: README.md  go.mod  go.sum  integration_test.go  network_topology.html  policy.hujson  test-edge-cases.hujson  test-policy.hujson
go-rewrite/cmd/tailscale-mapper/: main.go
go-rewrite/internal/api/: oauth.go  tailscale.go
go-rewrite/internal/config/: config.go
go-rewrite/internal/graph/: builder.go  builder_test.go
go-rewrite/internal/models/: device.go  graph.go  policy.go
go-rewrite/internal/parser/: policy.go  policy_test.go  validator.go
go-rewrite/internal/renderer/: html.go  html_test.go  templates_simple.go
go-rewrite/internal/server/: handlers.go  server.go
go-rewrite/internal/utils/: files.go  security.go
models/: __init__.py  policy_data.py
scripts/: validate-policy.sh
server/: server.py
services/: __init__.py  container.py  file_loader.py  policy_validator.py
tests/: README.md  __init__.py  pytest.ini  test_hexagon_feature.py  test_network_graph.py  test_policy_parser.py  test_policy_parser_comprehensive.py  test_regression_prevention.py  test_renderer.py  test_renderer_comprehensive.py  test_search_functionality.py  test_ui_bug_fixes.py  test_utils.py  test_zoom_config.py
tests/fixtures/: __init__.py  mock_policy_data.py
