[project]
name = "tailscale-network-topology-mapper"
version = "2.1.1"
description = "A visual way to view your ACL and Grant rules for Tailscale"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SimplyMinimal", email = "simplyminimal@users.noreply.github.com"}
]
keywords = ["tailscale", "network", "topology", "visualization", "acl", "grants", "graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pyvis>=0.3.2",
    "hjson>=3.1.0",
    "beautifulsoup4",
]

[project.optional-dependencies]
server = [
    "flask",
]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
tailscale-mapper = "main:main"

[project.urls]
Homepage = "https://github.com/SimplyMinimal/tailscale-network-topology-mapper"
Repository = "https://github.com/SimplyMinimal/tailscale-network-topology-mapper"
Issues = "https://github.com/SimplyMinimal/tailscale-network-topology-mapper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

